changed insist to must

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="footer">
-      <h2 class="my-color my-font">stalk me, if you insist..</h2>
+      <h2 class="my-color my-font">stalk me, if you must..</h2>
       <ul class="list-inline">
         <li>
           <a
